# controlnet-depth-pipeline

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: train_config.yaml
docs/: ARCHITECTURE.md
scripts/: download_data.py  serve.py  train.py
src/data/: __init__.py  dataset.py  transforms.py
src/model/: __init__.py  controlnet.py  diffusion.py  unet.py
src/serving/: __init__.py  app.py  inference.py  monitoring.py
src/training/: __init__.py  evaluate.py  trainer.py
tests/: test_api.py  test_data.py  test_model.py
